# x2_rental_platform

./: .gitattributes  .gitignore  README.md  X2_Rental_Platform_Development_Modules.md  X2_Rental_Scenario_Platform_Practical_Plan.md
docs/: x2-aimdk-adapter.md
docs/superpowers/plans/: 2026-07-03-windows-desktop-foundation.md  2026-07-04-full-local-platform.md
local-api/app/: __init__.py  gateway.py  main.py  platform.py  robot_adapters.py  robot_gateway_client.py  robot_models.py  templates.py
local-api/tests/: test_app_mode.py  test_health.py  test_platform_workflow.py  test_robot_adapter_selection.py  test_robot_gateway_split.py  test_robot_runtime.py
scripts/: build-windows-app.ps1  dev-windows-app.ps1  start-local-api.ps1  start-robot-gateway.sh
sdk/: README.md
windows-app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
windows-app/src/: App.css  App.tsx
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/src/: main.rs
